--- a/conf.yaml
+++ b/conf.yaml
@@ -9,17 +9,17 @@ log:
   level: 4
 
 play: #数组
-    - playList: "./vod.txt" #播放列表路径
-      playListSelectType: 1 #播放列表的选择方式: 0 顺序  1随机
+    - playList: "./live.txt" #播放列表路径
+      playListSelectType: 0 #播放列表的选择方式: 0 顺序  1随机
       sessMin: 1
       sessMax: 1
       sessIncreaseSpeed: 5     
-      sessBytesPerSec: 8048576 #1MB/s
+      sessBytesPerSec: 10485760 #1MB/s
       sessContinuousPlayTime: 3600 #连续拉流多少秒后触发休息
       sessPauseTime: 0 #休息多少秒后继续拉流
       sessRepeat: 1
     - playList: ""
-      playListSelectType: 1 #播放列表的选择方式: 0 顺序  1随机
+      playListSelectType: 0 #播放列表的选择方式: 0 顺序  1随机
       sessMin: 0               
       sessMax: 0               
       sessIncreaseSpeed: 0     
