--- a/conf.yaml
+++ b/conf.yaml
@@ -18,12 +18,12 @@ play: #数组
       sessContinuousPlayTime: 3600 #连续拉流多少秒后触发休息
       sessPauseTime: 0 #休息多少秒后继续拉流
       sessRepeat: 1
-    - playList: ""
+    - playList: "./vod.txt"
       playListSelectType: 0 #播放列表的选择方式: 0 顺序  1随机
-      sessMin: 0               
-      sessMax: 0               
-      sessIncreaseSpeed: 0     
-      sessBytesPerSec: 0       
-      sessContinuousPlayTime: 0
-      sessPauseTime: 0
+      sessMin: 1
+      sessMax: 1
+      sessIncreaseSpeed: 5
+      sessBytesPerSec: 10485760 #1MB/s
+      sessContinuousPlayTime: 3600 #连续拉流多少秒后触发休息
+      sessPauseTime: 0 #休息多少秒后继续拉流
       sessRepeat: 1
